[Test] Change author_image_url

--- a/blog/2021-03-30-welcome.md
+++ b/blog/2021-03-30-welcome.md
@@ -4,7 +4,7 @@ title: Test
 author: dozer
 author_title: dozer_test
 author_url: https://github.com/dozer-jang
-author_image_url: https://raw.githubusercontent.com/dozer-jang/dozer-jang.github.io/main/static/img/author/author.png1315101?s=400&v=4
+author_image_url: https://raw.githubusercontent.com/dozer-jang/dozer-jang.github.io/main/static/img/author/author.png
 tags: [test, hello, docusaurus]
 ---
 
